   values.
 * gui/Config.c: Use TRUE/FALSE for boolean values, enums for byte values in
   config.
 * gui/ConfDlg.c: Likewise.
 * macosx/PcsxController.m: Likewise.
 * win32/gui/ConfigurePlugins.c: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * libpcsxcore/psxmem.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/plugins.c: Likewise.
 * libpcsxcore/misc.c: Likewise.

May 11, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/Gtk2Gui.c: Use TRUE/FALSE instead of 0/1 for NetOpened.
 * gui/Plugin.c: Likewise.
 * win32/gui/plugin.c: Likewise.
 * macosx/Plugin.c: Removed obsolete code.

May 10, 2010 edgbla <edgbla@yandex.ru>

 * data/pcsx.glade2: Memory cards dialog is now resizable, icons were
   enlarged and animated. (experimental,gtk)
 * gui/MemcardDlg.c: Likewise.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxcommon.c: Include ppf.h.
 * libpcsxcore/misc.c: Silenced MSVC warning.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: Use functions instead of using global variables,
   other minor cleanups.
 * gui/Plugin.c: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Gtk2Gui.c: Likewise.
 * win32/gui/plugin.c: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * libpcsxcore/cdriso.c: Likewise.
 * libpcsxcore/psxcommon.c: Likewise.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/psxbios.c: Moved declaration of netError() into ...
 * libpcsxcore/sio.h: Here.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Got rid of gzfreezel.
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/misc.c: Added savestate versioning support.
 * gui/Gtk2Gui.c: Don't reset when loading from savestate unless loading
   succeeded.

May 10, 2010 edgbla <edgbla@yandex.ru>
